// $Id$

Birthdays 6.x-1.0, FUTURE
-----------------------------
- Ported to 6.x.
- Added Simpletests.
- Separated several functions to files of their own.
- Introduced user_mail_tokens() instead of @name for birthday mails.
- Introduced Batch API for synchronization to help long synchronization
  processes.


Birthdays 5.x-1.3, 2008-10-08
-----------------------------
- Fixed bug in sending periodic e-mails. Always listed 7 days, independent
  of the selected frequency.
- Improved output of administration reminders.
- Fixed the incompatibility of LoginToboggan and Birthdays module.
- Fixed some tiny coding standard errors.


Birthdays 5.x-1.2, 2008-10-01
-----------------------------
- CHANGELOG.txt, INSTALL.txt and README.txt are now similar to Drupal's files
- Date field can now be empty and thus truely be required. Defaults to empty,
  to make accidental birthdays less likely.
- Dropped 'delete birthday' permission and 'Remove birthday' check box.
- Introduced constants in stead of hard coded values.
- Frequency of admin mails is now configurable (daily, weekly, monthly).
- Birthdays field is set as global during module initiation in stead of using
  the 'birthdays_field_name' variable all over the place.
- Added the use of hook_requirements() and made requirement checks less
  intrusive but more informative.
- Added option 'hide block when no birthdays' in stead of showing the 'Nobody
  is having their birthday soon'.
- Fixed bug in cron excution which caused it to creep forward over time.
- Fixed various small issues cleaned up code.


Birthdays 5.x-1.1, 2008-04-09
-----------------------------
- Birthdays 5.x-1.1 released
- Added pgsql-support
- Implemented better compliance with Drupal coding standards
- Fixed Sagittarius typo


Birthdays 5.x-1.0, 2007-11-06
-----------------------------
- All code rewritten according to coding guidelines of Drupal
- Integrated with Profile module
- Added 2 user options:
  - Hide year & age
  - Do not send mail on birthday